--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,3 +36,10 @@ h1{
   color: transparent;
   width: 60vw;
 }
+
+
+@media screen and (max-width:400px){
+  .grid {
+    margin: 3rem 1rem;
+  }
+}
