Added more pokemons and scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,6 +38,23 @@ h1{
 }
 
 
+  /* width */
+.scroll::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+.scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.scroll::-webkit-scrollbar-thumb {
+  background: #35FCEB; 
+  border-radius: 10px;
+}
+
 @media screen and (max-width:400px){
   .grid {
     margin: 3rem 1rem;
