--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,17 @@
 @import url(//db.onlinewebfonts.com/c/f4d1593471d222ddebd973210265762a?family=Pokemon);
 
+@font-face {font-family: "Pokemon Solid";
+  src: url("./fonts/f4d1593471d222ddebd973210265762a.eot"); /* IE9*/
+  src: url("./fonts/f4d1593471d222ddebd973210265762a.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+  url("./fonts/f4d1593471d222ddebd973210265762a.woff2") format("woff2"), /* chrome、firefox */
+  url("./fonts/f4d1593471d222ddebd973210265762a.woff") format("woff"), /* chrome、firefox */
+  url("./fonts/f4d1593471d222ddebd973210265762a.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url("./fonts/f4d1593471d222ddebd973210265762a.svg#Pokemon Solid") format("svg"); /* iOS 4.1- */
+}
+
+.demo{
+  }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -24,7 +36,11 @@ code {
 }
 
 h1{
-  font-family: "Pokemon";
+  font-family:"Pokemon Solid" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
   color: red;
 }
 
